<resources>
    <string name="booking_price_format">Prezzo: €%.2f</string>
    <string name="booking_summary">Riepilogo prenotazione</string>
    <string name="booking_confirmed">Prenotazione effettuata con successo!</string>
    <string name="view_bookings">Visualizza prenotazioni</string>
    <string name="service_icon">Icona del servizio</string>
    <string name="date_icon">Icona della data</string>
    <string name="time_icon">Icona dell\'orario</string>
    <string name="book_appointment_title">Prenota l\'appuntamento</string>
    <string name="select_time">Seleziona l\'orario</string>
    <string name="book_now">Prenota ora</string>
    <string name="permission_required_title">Permesso Necessario</string>
    <string name="notification_permission_rationale">Per poterti inviare promemoria sui tuoi appuntamenti e aggiornamenti importanti, abbiamo bisogno del tuo permesso per inviare notifiche. Le notifiche sono fondamentali per non perdere le tue prenotazioni. Vuoi concedere il permesso?</string>
    <string name="error_invalid_time">Orario non valido. Seleziona un orario valido.</string>
    <string name="error_invalid_date">Data non valida. Seleziona una data valida.</string>
    <string name="error_no_operators_available">Nessun operatore disponibile per l\'orario selezionato. Prova un altro orario o un\'altra data.</string>
    <string name="error_slot_not_available">Questo orario non è più disponibile. Seleziona un altro orario.</string>
    <string name="error_booking_not_found">Prenotazione non trovata.</string>
    <string name="error_booking_already_exists">Hai già una prenotazione per questo servizio in questo orario.</string>
    <string name="error_invalid_voucher">Codice voucher non valido</string>
    <string name="error_voucher_exceeds_amount">Il valore del voucher supera l\'importo dell\'acquisto</string>
    <string name="error_voucher_code_empty">Inserisci un codice voucher</string>
    <string name="error_voucher_not_found">Voucher non trovato</string>
    <string name="error_voucher_already_exists">Questo voucher esiste già</string>
    <string name="error_voucher_permission_denied">Non hai i permessi per utilizzare questo voucher</string>
    <string name="error_insufficient_points">Punti insufficienti per riscattare questo voucher</string>
    <string name="earned_points_format">"Punti guadagnati: %1$d"</string>
    <string name="total_points_format">"Punti totali: %1$d"</string>
    <string name="error_expiry_date_empty">La data di scadenza è obbligatoria</string>
    <string name="error_expiry_date_invalid_format">Formato della data di scadenza non valido</string>
    <string name="error_expiry_date_expired">La data di scadenza è passata</string>
    <string name="error_card_number_empty">Il numero della carta è obbligatorio</string>
    <string name="error_card_number_invalid_format">Formato del numero della carta non valido</string>
    <string name="error_card_number_invalid_card">Numero della carta non valido</string>
    <string name="error_card_number_invalid_length">Lunghezza del numero della carta non valida</string>
    <string name="error_invalid_credit_card">Carta di credito non valida</string>
    <string name="error_cvv_empty">Il CVV è obbligatorio</string>
    <string name="error_cvv_invalid_format">Formato del CVV non valido</string>
    <string name="error_cvv_invalid_length">Lunghezza del CVV non valida</string>
    <string name="coupon_generated_success_message">Il tuo coupon è stato generato con successo!</string>
    <string name="coupon_details_format">Valore: %1$s\nScadenza: %2$s</string>
    <string name="coupon_code_copied">Codice coupon copiato negli appunti</string>
    <string name="error_gift_card_not_found">Gift card non trovata</string>
    <string name="error_gift_card_not_valid">Gift card non valida</string>
    <string name="error_unknown_user">Errore utente sconosciuto</string>
    <string name="error_gift_card_validation_failed">Validazione della gift card fallita</string>
    <string name="error_invalid_amount">Importo non valido</string>
    <string name="error_unknown_payment">Errore pagamento sconosciuto</string>
    <string name="error_discount_exceeds_amount">Lo sconto supera l\'importo</string>
    <string name="confirm_coupon">Conferma il coupon</string>
    <string name="coupon_value_details">Coupon del valore di %.2f€</string>
    <string name="points_required_details">Richiede %d punti</string>
    <string name="points_remaining_details">Ti rimarranno %d punti dopo il riscatto</string>
    <string name="service_duration_format">Duration: %1$d minutes</string>
    <string name="gift_card_value_format">%.0f €</string>
    <string name="price_format">%1$.2f €</string>
    <string name="price_format_negative">-%1$.2f €</string>
    <string name="discount_amount">Sconto: -€%1$.2f</string>
    <string name="discount_applied">Sconto di €%1$.2f applicato</string>
    <string name="check_card_details">Per favore controlla i dettagli della tua carta</string>
    <string name="continue_text">Continua</string>
    <string name="confirm_payment">Paga</string>
    <string name="processing">Elaborazione in corso</string>
    <string name="done">Fatto</string>
    <string name="gift_card_created">Gift Card creata</string>
    <string name="go_to_home">Vai alla Home</string>
    <string name="discount_codes">Codici Sconto</string>
    <string name="enter_code">Inserisci Codice</string>
    <string name="apply">Applica</string>
    <string name="discount">Sconto</string>
    <string name="original_amount">Importo Originale</string>
    <string name="review_payment">Rivedi Pagamento</string>
    <string name="enter_card_details">Inserisci i Dettagli della Carta</string>
    <string name="expiry">Scadenza (MM/YY)</string>
    <string name="select_payment_method">Seleziona metodo di pagamento</string>
    <string name="pay_now">Paga ora</string>
    <string name="points_format">%d pt</string>
    <string name="coupon_generated_success">Coupon Generato!</string>
    <string name="coupon_generated_description">Puoi copare il codice e usarlo per avere uno sconto sul tuo prossimo acquisto</string>
    <string name="select_another_coupon">Seleziona un altro coupon</string>
    <string name="back_to_coupons">Torna ai miei coupon</string>
    <string name="coupon_copied">Codice copiato negli appunti</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="no_gift_cards">Nessuna Gift Card</string>
    <string name="no_gift_cards_description">Non hai ancora acquistato nessuna gift card. Acquistane una per iniziare!</string>
    <string name="your_gift_cards">Le tue Gift Cards</string>
    <string name="purchase_gift_card">Acquista Gift Card</string>
    <string name="discount_format">-€%.2f</string>
    <string name="payment_method">Metodo di pagamento</string>
    <string name="credit_card">Carta di credito</string>
    <string name="paypal">PayPal</string>
    <string name="google_pay">Google Pay</string>
    <string name="in_store">In negozio</string>
    <string name="discount_section_title">Applica uno sconto</string>
    <string name="discount_section_description">Inserisci un codice gift card o un coupon per applicare uno sconto al tuo acquisto</string>
    <string name="discount_code_hint">Codice sconto</string>
    <string name="enter_gift_card_or_coupon">Inserisci un codice gift card (GC) o un coupon</string>
    <string name="apply_discount">Applica</string>
    <string name="gift_card_applied_format">Gift Card %1$s (-€%.2f)</string>
    <string name="coupon_applied_format">Coupon %1$s (-€%.2f)</string>
    <string name="card_number">Numero carta</string>
    <string name="expiry_date">Data scadenza (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="redirect_to_paypal">Verrai reindirizzato a PayPal per completare il pagamento</string>
    <string name="proceed_with_google_pay">Procedi con Google Pay</string>
    <string name="proceed_to_payment">Procedi al pagamento</string>
    <string name="copy_code">Copia codice</string>
    <string name="gift_card_generated_title">Gift Card generata con successo!</string>
    <string name="gift_card_code">Codice Gift Card</string>
    <string name="expires_on">Scade il: %1$s</string>
    <string name="gift_card_instructions">Condividi questo codice con chi vuoi. La gift card può essere utilizzata una sola volta per il pagamento di un servizio di valore uguale o superiore.</string>
    <string name="code_copied_to_clipboard">Codice copiato negli appunti</string>
    <string name="discount_applied_message">Sconto di €%.2f applicato con successo</string>
    <string name="gift_card_purchase_success">Puoi copare il codice e usarlo per avere uno sconto sul tuo prossimo acquisto</string>
    <string name="booking_payment_success">Prenotazione confermata con successo</string>
    <string name="error_invalid_discount_code">Codice sconto non valido</string>
    <string name="error_discount_already_applied">Uno sconto è già stato applicato</string>
    <string name="error_gift_card_value_too_low">Il valore della gift card è inferiore al prezzo del servizio</string>
    <string name="total_amount">Totale</string>
    <string name="original_price">Prezzo</string>
    <string name="total_to_pay">Da pagare</string>
    <string name="payment_details">Dettagli pagamento</string>
    <string name="credit_card_number">Numero carta</string>
    <string name="save_card_for_future">Salva carta per pagamenti futuri</string>
    <string name="coupon_code">Codice coupon</string>
    <string name="apply_coupon">Applica</string>
    <string name="applied_coupon_format">%1$s (%2$s)</string>
    <string name="coupon_section_title">Hai un coupon?</string>
    <string name="appointment_date_format">%1$s</string>
    <string name="appointment_time_format">%1$s-%2$s (%3$s)</string>
    <string name="duration_format">Durata: %d minuti</string>
    <string name="duration_hours_only">%1$d ora</string>
    <string name="duration_minutes_only">%1$d min</string>
    <string name="gift_card_purchase">Acquisto Gift Card</string>
    <string name="coupon_applied_success">Coupon applicato con successo!</string>
    <string name="coupon_removed">Coupon rimosso</string>
    <string name="payment_successful">Pagamento completato con successo</string>
    <string name="error_invalid_coupon">Codice coupon non valido</string>
    <string name="error_expired_coupon">Questo coupon è scaduto</string>
    <string name="error_already_used_coupon">Questo coupon è già stato utilizzato</string>
    <string name="error_coupon_not_applicable">Questo coupon non può essere applicato a questo acquisto</string>
    <string name="error_coupon_min_amount">Importo minimo per utilizzare questo coupon: %1$s</string>
    <string name="error_payment_failed">Pagamento non riuscito. Riprova.</string>
    <string name="error_invalid_card">Carta non valida</string>
    <string name="error_card_expired">Carta scaduta</string>
    <string name="error_invalid_cvv">CVV non valido</string>
    <string name="close">Chiudi</string>
    <string name="coupon_generated_title">Coupon Generato!</string>
    <string name="coupon_code_hint">Codice Coupon</string>
    <string name="copy_code_description">Copia codice coupon</string>
    <string name="placeholder_first_name">Nome</string>
    <string name="placeholder_last_name">Cognome</string>
    <string name="placeholder_allergy">Eventuali allergie</string>
    <string name="placeholder_disability">Eventuali invalidità</string>
    <string name="logohammami">logoHammami</string>
    <string name="placeholder_gender">Genere</string>
    <string name="personal_information">Informazioni personali</string>
    <string name="birth_date">Data di nascita</string>
    <string name="select_date">Seleziona la data</string>
    <string name="optional">Opzionale</string>
    <string name="save">Salva</string>
</resources>