<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/generatedTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/coupon_generated_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/generatedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/coupon_generated_description"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generatedTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCouponCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/coupon_code_hint"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_content_copy"
        app:endIconContentDescription="@string/copy_code_description"
        app:layout_constraintTop_toBottomOf="@id/generatedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldCouponCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/close"
        app:layout_constraintTop_toBottomOf="@id/textInputCouponCode"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>